--- a/grafana-button.html
+++ b/grafana-button.html
@@ -955,3 +955,14 @@
     });
 
 </script>
+<style>
+    .css-new5m1{
+        display: flex;
+        flex-direction: row;
+        -webkit-box-align: center;
+        align-items: center;
+        -webkit-box-pack: start;
+        justify-content: flex-start;
+        gap: 8px;
+    }
+</style>
