--- a/grafana-button.html
+++ b/grafana-button.html
@@ -122,7 +122,7 @@
                     <h3>${window.gfexpLangs[window.gfexpLang].serverUnavailable}</h3>
                     <p>${window.gfexpLangs[window.gfexpLang].pleaseCheckServer}</p>
                     <button id="GFEXP_retry_button" style="margin-top: 1rem;" onclick="window.checkStatus()">
-                    <svg viewBox="0 0 24 24" version="1.1" style="width:17px;height:17px;margin-right: 8px;">
+                    <svg viewBox="0 0 24 24" version="1.1" style="width:17px;height:17px;">
                         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                             <g id="Reload">
                                 <rect id="Rectangle" fill-rule="nonzero" x="0" y="0" width="24" height="24"></rect>
@@ -190,7 +190,7 @@
                     <h3>${window.gfexpLangs[window.gfexpLang].success}</h3>
                     <p>${window.gfexpLangs[window.gfexpLang].youCanDownload}</p>
                     <button id="GFEXP_download_button" style="margin-top: 1rem;" onclick="window.open('${pdfUrl}', '_blank')">
-                        <svg viewBox="0 0 24 24" version="1.1" style="width:17px;height:17px;margin-right: 8px;">
+                        <svg viewBox="0 0 24 24" version="1.1" style="width:17px;height:17px;">
                             <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                 <g id="Download">
                                     <rect id="Rectangle" fill-rule="nonzero" x="0" y="0" width="24" height="24"></rect>
@@ -263,6 +263,17 @@
                 newButton.setAttribute("data-testid", "data-testid new export button export as pdf");
                 newButton.tabIndex = 1;
                 newButton.innerHTML = `
+<style>
+.css-new5m1{
+        display: flex;
+        flex-direction: row;
+        -webkit-box-align: center;
+        align-items: center;
+        -webkit-box-pack: start;
+        justify-content: flex-start;
+        gap: 8px;
+    }
+</style>
 <div class="css-new5m1">
     <svg xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="-16.5 0 175 175" fill="none" style="width: 15px; height: 15px;">
         <g>
@@ -383,7 +394,6 @@
         flex-shrink: 0;
         line-height: 0;
         vertical-align: middle;
-        margin-right: 8px;
     }
 
     .css-1v5z3sd-button {
@@ -662,7 +672,6 @@
 
     button[disabled].GFEXP_waiting .GFEXP_loader {
         display: inline-block;
-        margin-right: 8px;
     }
     button[disabled].GFEXP_waiting svg {
         display: none;
@@ -753,7 +762,7 @@
         <div id="GFEXP_success" class="GFEXP_success"></div>
 
         <button class="GFEXP_generatePdf ${gfexpWaiting ? 'GFEXP_waiting' : ''}" ${(gfexpStatus !== 'connected' || gfexpWaiting) ? 'disabled' : ''}>
-             <svg xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="-16.5 0 175 175" fill="none" style="width: 15px; height: 15px;margin-right: 8px">
+             <svg xmlns="http://www.w3.org/2000/svg" width="800px" height="800px" viewBox="-16.5 0 175 175" fill="none" style="width: 15px; height: 15px;">
                 <g>
                     <path d="M140.687 93.1644C140.867 109.431 141.111 125.696 141.195 141.964C141.226 147.904 140.769 153.843 140.726 159.789C140.664 168.177 134.102 173.205 126.549 173.359C111.171 173.673 95.7887 174.043 80.4081 173.964C62.1048 173.871 43.8014 173.402 25.5027 172.933C21.2425 172.722 16.9978 172.267 12.7895 171.571C7.65492 170.849 2.60183 164.962 2.41608 159.374C1.94746 145.251 1.41382 131.124 1.25892 116.996C0.916312 85.9138 0.849366 54.8283 0.517257 23.7455C0.466719 18.9706 0.582881 14.345 2.55846 9.92649C4.03522 6.62121 6.14933 3.94077 9.81696 2.95101C11.1159 2.61352 12.4484 2.42131 13.7898 2.37799C19.5104 2.15156 25.2448 2.16377 30.9549 1.78703C52.4014 0.381158 73.846 1.45915 95.2925 1.63833C97.3468 1.59847 99.388 1.97594 101.292 2.74783C103.196 3.51971 104.924 4.66982 106.371 6.12886C113.287 12.689 120.702 18.7232 127.859 25.0313C130.804 27.6277 133.594 30.3994 136.493 33.0484C137.301 33.7478 137.954 34.6076 138.412 35.573C138.87 36.5386 139.122 37.5892 139.152 38.6574C139.386 44.5959 139.756 50.5316 139.854 56.4714C140.055 68.7013 140.113 80.9335 140.231 93.165L140.687 93.1644ZM93.3799 10.0906C91.9662 9.94487 90.9712 9.76864 89.9729 9.75026C75.1567 9.47637 60.3403 9.21712 45.5236 8.97342C39.1296 8.87235 32.7342 8.83717 26.3395 8.79713C23.09 8.77678 19.8326 8.67361 16.5936 8.85804C12.1305 9.11204 10.6105 10.4209 10.0158 14.9523C9.56047 18.7257 9.34821 22.5246 9.38043 26.3254C9.37321 30.6933 9.80049 35.0604 9.83199 39.4297C9.92847 52.7783 9.94692 66.1273 9.95676 79.4764C9.97468 104.266 9.98078 129.056 9.97514 153.845C9.93917 154.856 10.0032 155.866 10.1661 156.864C11.1769 161.866 13.8416 164.576 19.0188 164.792C41.0186 165.711 63.0196 165.692 85.0274 165.289C95.8038 165.092 106.583 165.033 117.361 164.917C120.052 164.888 122.75 164.996 125.434 164.838C129.65 164.591 132.02 162.131 131.971 157.921C131.912 152.655 131.562 147.394 131.47 142.128C131.375 136.634 131.564 131.132 131.404 125.641C130.997 111.516 130.304 97.3984 130.036 83.272C129.815 71.498 130.036 59.7163 130.05 47.9384C130.05 47.0851 129.926 46.2362 129.884 45.7066C122.543 45.7066 115.485 45.7724 108.431 45.6681C106.08 45.6287 103.739 45.3414 101.448 44.8105C98.0301 44.0183 96.0952 41.8164 95.876 38.158C95.6338 34.1307 95.2282 30.1134 94.8659 26.094C94.3953 20.8545 93.8958 15.6261 93.3799 10.0906ZM124.647 36.3806C124.768 36.1706 124.889 35.9609 125.01 35.7512L102.689 15.4926L102.174 15.7502C103.277 22.97 104.38 30.1894 105.505 37.5568L124.647 36.3806Z" fill="white"/>
                     <path d="M62.7033 132.498C63.0315 123.33 63.3472 114.161 63.7095 104.994C63.8322 101.879 64.4596 101.526 67.6015 100.75C76.6321 98.5181 83.3248 101.989 88.6857 108.989C89.0946 109.522 89.4661 110.086 89.8862 110.61C100.754 124.163 91.0676 140.352 78.3346 143.579C75.624 144.275 72.8765 144.819 70.1048 145.209C68.4883 145.465 66.8369 145.068 65.5123 144.107C64.1879 143.146 63.2989 141.698 63.0407 140.082C62.5694 137.588 62.297 135.06 61.936 132.547L62.7033 132.498ZM69.4531 136.865C72.5687 137.019 75.6791 136.471 78.5552 135.263C86.909 131.616 89.7936 123.146 85.2688 115.296C84.1682 113.346 82.8798 111.508 81.4227 109.808C80.2177 108.381 78.7291 107.219 77.0522 106.396C75.3752 105.574 73.5453 105.108 71.6787 105.029C72.2858 115.817 70.4848 126.197 69.4557 136.865H69.4531Z" fill="white"/>
@@ -779,7 +788,7 @@
     <h3>${window.gfexpLangs[window.gfexpLang].serverUnavailable}</h3>
     <p>${window.gfexpLangs[window.gfexpLang].pleaseCheckServer}</p>
     <button id="GFEXP_retry_button" style="margin-top: 1rem;" onclick="window.checkStatus()">
-    <svg viewBox="0 0 24 24" version="1.1" style="width:17px;height:17px;margin-right: 8px;">
+    <svg viewBox="0 0 24 24" version="1.1" style="width:17px;height:17px;">
         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
             <g id="Reload">
                 <rect id="Rectangle" fill-rule="nonzero" x="0" y="0" width="24" height="24"></rect>
@@ -805,7 +814,7 @@
                                 <h3>${window.gfexpLangs[window.gfexpLang].success}</h3>
                                 <p>${window.gfexpLangs[window.gfexpLang].youCanDownload}</p>
                                 <button id="GFEXP_download_button" style="margin-top: 1rem;" onclick="window.open('${gfexpPdfUrl}', '_blank')">
-                                    <svg viewBox="0 0 24 24" version="1.1" style="width:17px;height:17px;margin-right: 8px;">
+                                    <svg viewBox="0 0 24 24" version="1.1" style="width:17px;height:17px;">
                                         <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                             <g id="Download">
                                                 <rect id="Rectangle" fill-rule="nonzero" x="0" y="0" width="24" height="24"></rect>
@@ -990,14 +999,3 @@
     });
 
 </script>
-<style>
-    .css-new5m1{
-        display: flex;
-        flex-direction: row;
-        -webkit-box-align: center;
-        align-items: center;
-        -webkit-box-pack: start;
-        justify-content: flex-start;
-        gap: 8px;
-    }
-</style>
